Resolves: tdf#116876 don't reselect index on resize if it wouldn't change

selecting the index sets it as active and updates the previews, so if its an
inactive index and resize happens, leave it as inactive but selected

Change-Id: If823f6b3e8f2ee4e77ba5e5d0202d72893ed614c